syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.jal.crawler.proto.configComponnet";

message ConfigComponentStatus {
    string config_tag = 1;
}
