syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.jal.crawler.proto.status";


service RpcComponentStatus {
    rpc rpcComponentStatus (ComponentStatus) returns (ComponentStatus);
}

service RpcComponentLeaderService {
    rpc rpcComponentNotify (ComponentRelation) returns (ComponentStatus);
}

service RpcComponentHeartService {
    rpc rpcComponentHeart (HeartMessage) returns (HeartMessage);
}

message ComponentStatus {
    ComponentType componentType = 4;
    Status component_status = 1;
    int32 taskNum = 2;
    map<string, TaskStatistics> tasks = 3;
    string host = 5;
    int32 port = 6;

}

message TaskStatistics {
    Status status = 1;
    int64 resourceFountCycle = 2;
    int64 resourceNotFoundCycle = 3;
    int64 processorErrorCycle = 4;
    int64 processorSuccessCycle = 5;
    int64 persistSuccessCycle = 6;
    int64 persistErrorCycle = 7;
    int64 cyclePerTime = 8;
    int64 startTime = 9;
    int64 endTime = 10;
    bool test = 11;
    map<int64,Status> historyStatus=12;


}
enum ComponentType {
    DOWNLOAD = 0;
    RESOLVE = 1;
    DATA=2;
}

enum Status {
    NO_INIT = 0;
    INIT = 1;
    STARTED = 2;
    STOPPED = 3;
    FINISHED = 4;
    DESTROYED = 5;
}

message ComponentRelation {
    ComponentRelationType type = 1;
    ComponentRelation leader = 2;
    string host = 3;
    int32 port = 4;
    Status status = 5;
    ComponentType component_type=6;
}

enum ComponentRelationType {
    LEADER = 0;
    CLUSTER = 1;
}

message HeartMessage {
    Status status = 1;
}
